--- a/build-push/action.yml
+++ b/build-push/action.yml
@@ -1,6 +1,10 @@
 name: "Build and Push Docker Image"
 description: "Reusable action for building and pushing Docker images"
 inputs:
+  dockerhub-push:
+    description: "Flag to push to Dockerhub"
+    required: false
+    default: "false"
   dockerhub-username:
     description: "The Dockerhub username"
     required: true
@@ -133,11 +137,12 @@ runs:
         
         echo "DOCKER_TAGS=${TAG}" >> $GITHUB_ENV
         
-    # - name: Login to Docker Hub
-    #   uses: docker/login-action@v3
-    #   with:
-    #     username: ${{ inputs.dockerhub-username }}
-    #     password: ${{ inputs.dockerhub-token}}
+    - name: Login to Docker Hub
+      if: ${{ inputs.dockerhub-push == 'true' }}
+      uses: docker/login-action@v3
+      with:
+        username: ${{ inputs.dockerhub-username }}
+        password: ${{ inputs.dockerhub-token}}
 
     - name: Login to Private Registry
       if: ${{ inputs.private-registry-push == 'true' }}
